fixed para spacing

--- a/Webpages/Css/style.css
+++ b/Webpages/Css/style.css
@@ -25,7 +25,7 @@
     --bs: 0.25em 0.25em 0.75em rgba(0,0,0,.25),
           0.125em 0.125em 0.25em rgba(0,0,0,.15);
 }
- */ */
+ */ 
 
 
 .header
@@ -46,6 +46,7 @@
 .nav {width: 150px; position: fixed;
   z-index: 1; top: 20px; left: 10px; background-color: black;
   overflow-x: hidden; padding: 8px 0;
+  margin-top: 1em;
 }
 .nav  li {display: inline-block; padding: 0 25px 0 25px}
 .nav  li  a {text-decoration: none; color:whitesmoke; font-size: 25px;
@@ -54,7 +55,9 @@
 .nav li  a:hover {color: gold}
 
 
-
+.the_h1 {
+    text-align: center;
+}
 
 body
 {   background-image: url(/Webpages/Css/jorge-gascon-dZOYdWtko-Q-unsplash.jpg) ;
@@ -73,12 +76,14 @@ body
 
 p {
   list-style-type: none;
-  margin: 2.5%;
+  margin-top: 17%;
+  margin-left: 2.5%;
   padding: 3%;
   text-align:center;
   list-style-type: none;
   width: 95%;
-  background-color:black;
+  background-color:black ;
+  
 }
 
 ul {
@@ -101,6 +106,11 @@ ul {
     position: left;
 } */
 
+.my_container {
+    margin-top: 15em;
+}
+
+
 .my_row {
     border: 3px solid darkgoldenrod;
     margin: 0%;
@@ -115,6 +125,7 @@ ul {
     0.125em 0.125em 0.25em rgba(0,0,0,.15);;
     width: 10em;
     height: 25em;
+    background-color: black;
 }
 
 .img_out_loft {
@@ -141,6 +152,3 @@ ul {
     object-fit: fill;
 }
 
-.para {
-    background-color: none;
-}
